test/fail/Imports/ShouldBePi.agda

module ShouldBePi where

postulate X : Set

